force-app/main/default/objects/HP_OPSEventLog__c/HP_OPSEventLog__c.object-meta.xml
<CustomObject>
    <label>HP OPSEventLog</label>
    <nameField>
        <label>HP OPSEventLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HP OPSEventLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>