force-app/main/default/objects/HP_OPSEventLog__c/fields/HP_Date_de_prestation__c.field-meta.xml
<CustomField>
    <fullName>HP_Date_de_prestation__c</fullName>
    <label>Date de prestation</label>
    <type>Date</type>
</CustomField>