force-app/main/default/objects/HP_OPSEventLog__c/fields/HP_Date_de_reception__c.field-meta.xml
<CustomField>
    <fullName>HP_Date_de_reception__c</fullName>
    <label>Date de reception</label>
    <type>Date</type>
</CustomField>