force-app/main/default/objects/HP_OPSEventLog__c/fields/HP_Description__c.field-meta.xml
<CustomField>
    <fullName>HP_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>