force-app/main/default/objects/HP_OPSEventLog__c/fields/HP_Flux__c.field-meta.xml
<CustomField>
    <fullName>HP_Flux__c</fullName>
    <label>Flux</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>