force-app/main/default/objects/HP_OPSEventLog__c/fields/HP_idAffaire__c.field-meta.xml
<CustomField>
    <fullName>HP_idAffaire__c</fullName>
    <label>idAffaire</label>
    <length>15</length>
    <type>Text</type>
</CustomField>