force-app/main/default/objects/HP_OPSEventLog__c/fields/HP_PDL_PCE__c.field-meta.xml
<CustomField>
    <fullName>HP_PDL_PCE__c</fullName>
    <label>identifiant PDL PCE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>