force-app/main/default/objects/HP_OPSEventLog__c/fields/HP_Statut__c.field-meta.xml
<CustomField>
    <fullName>HP_Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Traiter</fullName>
            </value>
            <value>
                <fullName>Traitement OK</fullName>
            </value>
            <value>
                <fullName>Traitement KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>