force-app/main/default/objects/HP_OPSEventLog__c/fields/HP_Statut_prestation__c.field-meta.xml
<CustomField>
    <fullName>HP_Statut_prestation__c</fullName>
    <label>Statut prestation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>