force-app/main/default/objects/HP_OPSEventLog__c/fields/HP_Type_Energie__c.field-meta.xml
<CustomField>
    <fullName>HP_Type_Energie__c</fullName>
    <label>Type Energie</label>
    <length>5</length>
    <type>Text</type>
</CustomField>